Update logo colors and sizes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <h1>
         <a href="https://ep.phy.cam.ac.uk/" class="logo">
           <span class="sr-only">Jekyll</span>
-          <img src="/img/cam-logo.png" width="144" height="31" alt="Cambridge Logo">
+          <img src="/img/cam-logo.png" width="180" alt="Cambridge Logo">
         </a>
       </h1>
     </div>
@@ -18,7 +18,7 @@
       <h1>
         <a href="https://www.unah.edu.pe/" class="logo">
           <span class="sr-only">Jekyll</span>
-          <img src="/img/unah-logo.png" width="166" height="48" alt="UNAH Logo">
+          <img src="/img/unah-logo2.png" width="200" alt="UNAH Logo">
         </a>
       </h1>
     </div>
