--- a/_includes/news_contents.html
+++ b/_includes/news_contents.html
@@ -6,18 +6,18 @@
           <a href="/news/">All News</a>
         </div>
       </li>
-      <li {%- if page.title == 'Field Work' %} class="current" {%- endif %}>
+      <!-- <li {%- if page.title == 'Field Work' %} class="current" {%- endif %}>
         <div id="menu-nav">
           <a href="/field-work/">Field Work</a>
         </div>
-      </li>
+      </li> -->
     </ul>
     <h4>Recent Field Work</h4>
     <ul>
       {% for post in site.categories.field-work %}
       <li {%- if page.title == post.title %} class="current" {%- endif %}>
         <div id="menu-nav">
-          <a href="{{ post.url }}">{{ post.date | date: '%d %B %Y' }}</a>
+          <a href="{{ post.url }}">{{ post.title }}</a>
         </div>
         
       </li>
