--- a/_includes/news_contents.html
+++ b/_includes/news_contents.html
@@ -12,7 +12,7 @@
         </div>
       </li> -->
     </ul>
-    <h4>Field Work</h4>
+    <h4>Field Work & Workshops</h4>
     <ul>
       {% for post in site.categories.field-work %}
       <li {%- if page.title == post.title %} class="current" {%- endif %}>
